--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "Yohane",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "marked": "^0.5.1",
     "raw-loader": "^0.5.1",
     "react-router": "^3.2.1",
@@ -20,7 +25,7 @@
     "three": "^0.95.0"
   },
   "devDependencies": {
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -33,6 +38,7 @@
     "raw-loader": "^0.5.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "webpack-cli": "^3.3.2"
   }
 }
